welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: method pos has return statement; needs result type
			return true
                        ^SnakeBuggle:12: error: method pos has return statement; needs result type
				return true
                                ^SnakeBuggle:13: error: method pos has return statement; needs result type
			else return false
                             ^SnakeBuggle:19: error: method pos has return statement; needs result type
				return true
                                ^SnakeBuggle:20: error: method pos has return statement; needs result type
			else return false
                             ^